[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Crabby/02-Run/Run 04.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Crabby/02-Run/Run 02.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Crabby/02-Run/Run 06.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Crabby/02-Run/Run 03.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Crabby/02-Run/Run 05.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/Crabby/02-Run/Run 01.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.28572, 16.0714 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.1429, 10 )

[node name="enemy" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"
frame = 2
playing = true

[node name="FloorDetection" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( -19, -12 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 0.8 )
shape = SubResource( 2 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -30, 0 )
collision_mask = 4

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 4

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.714285, 1.42857 )
scale = Vector2( 0.999998, 0.999998 )
shape = SubResource( 3 )
